<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bangkit.fingoal.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.bangkit.fingoal.view.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.bangkit.fingoal.view.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" />
</navigation>