<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    app:cardBackgroundColor="@color/md_theme_surface_mediumContrast"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/category_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/category"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tv_date"
            app:layout_constraintStart_toEndOf="@+id/iv_category"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/transaction_name"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tv_time"
            app:layout_constraintStart_toEndOf="@+id/iv_category"
            app:layout_constraintTop_toBottomOf="@id/tv_category" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/transaction_amount"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tv_time"
            app:layout_constraintStart_toEndOf="@+id/iv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_transaction" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/transaction_date"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_category"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/transaction_time"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_transaction"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>